openshift-specifications/result-route-tls.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: result-kio
  labels:
    app: voting-app
  annotations:
    kubernetes.io/tls-acme: 'true'
spec:
  host: result.kyberorg.io
  to:
    kind: Service
    name: result
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
